--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "date-fns": "^3.6.0",
+    "next": "14.2.8",
     "react": "^18",
+    "react-day-picker": "^9.0.9",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8"
+    "eslint-config-next": "14.2.8",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
