--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "date-fns": "^3.6.0",
     "next": "14.2.8",
+    "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-day-picker": "^9.0.9",
     "react-dom": "^18",
