--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "date-fns": "^3.6.0",
     "next": "14.2.8",
     "next-auth": "^5.0.0-beta.21",
-    "react": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-day-picker": "^9.0.9",
-    "react-dom": "^18",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
